error.log
srcs/Server/Server.cpp:82:9: error: invalid suffix "db38" on integer constant
   82 | >>>>>>> 349db38 ([GENERAL] Changes for RFC 1459 compliance (especially for Server non-standard resps). [Client.cpp] changed buf size from 1024 to 512. [Server.hpp | Server.cpp] Added accessors of clients, for later channel and commands implementations, of password, for later additional auth-related commands, and broadcast() method for PRIVMSG and channel messages; Added signal(SIGPIPE, SIG_IGN) for crash prevention on broken client sockets. Replaced echo with 421 (Unknown command).)
      |         ^~~~~~~
srcs/Server/Server.cpp:55:1: error: version control conflict marker in file
   55 | <<<<<<< HEAD
      | ^~~~~~~
